Tweaks some core & theme elements - Disabled automatic updates - Adds an enqueue for the child theme styles - Fixes the .site-header z-index

--- a/public/wp-content/themes/mcluhan-child/style.css
+++ b/public/wp-content/themes/mcluhan-child/style.css
@@ -13,3 +13,8 @@ Tags: two-columns, left-sidebar, custom-menu, custom-colors, editor-style, featu
 Text Domain: mcluhan-child
 
 */
+
+.site-header
+{
+    z-index: 99998;
+}
